--- a/index.html
+++ b/index.html
@@ -444,12 +444,12 @@
                     </div>
                 </div>
                
-                <!-- <div class="col-md-4" style="min-height: 350px;">
+                <div class="col-md-4" style="min-height: 350px;">
                     <div class="position-relative h-100">
-                        <img class="position-absolute img-fluid w-100 h-100" src="img/slide/Gallery/G8.jpg"
+                        <img class="position-absolute img-fluid w-100 h-100" src="img/slide/PPDEV2E.png"
                             style="object-fit: cover;" alt="">
                     </div>
-                </div> -->
+                </div>
                
                 <!-- <div class="col-lg-4"> -->
                     <!-- <div class="nav nav-pills d-flex justify-content-between w-100 h-100 me-4">
