--- a/team.html
+++ b/team.html
@@ -99,7 +99,7 @@
                     <div class="row g-5">
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                             <div class="about-img">
-                                <img class="position-absolute img-fluid w-auto h-auto ceoProfile" src="img/toyeProfile1.png" alt="">
+                                <img class="position-absolute img-fluid w-auto h-auto m-5 ceoProfile" src="img/toyeProfile1.png" alt="">
                                 <img class="img-fluid" src="img/about-2.jpg" alt="">
                             </div>
                         </div>
