--- a/team.html
+++ b/team.html
@@ -99,11 +99,11 @@
                     <div class="row g-5">
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                             <div class="about-img">
-                                <img class="position-absolute img-fluid  ceoProfile" src="img/toyeProfile1.png" alt="">
+                                <img class="position-absolute img-fluid w-auto h-auto mb-5 pb-5 ceoProfile" src="img/toyeProfile1.png" alt="">
                                 <img class="img-fluid" src="img/about-2.jpg" alt="">
                             </div>
                         </div>
-                        <div class="col-lg-6 wow fadeIn mt-5" data-wow-delay="0.5s">
+                        <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                             <h4 class="section-title">ARC Obafemi A IBITOYE,</h4>
                             <h1 class="display-10 mb-4 btech">BTech, Msc(UNILAG), ARCON, PhD </h1>
                             <p style="text-align: justify;">Arc Obafemi A. Ibitoye (F4689), is a goal-driven architect. He has had his fair share of humble beginnings and steady progress.
