--- a/contact.html
+++ b/contact.html
@@ -155,7 +155,7 @@
         <div class="row g-5">
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-light mb-4">Address</h3>
-                <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>Block 5, plot 1A, Redemption Camp Mowe Ogun State.</p>
+                <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>Plot 1A, plot 5A, Estate 7, Redemption City, Nigeria.</p>
                 <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>(+234) 807-7701-903, <br> (+234) 813-8355-721, <br> (+234) 816-6778-555</p>
                 <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>urbancr8orsltd@gmail.com</p>
                 <div class="d-flex pt-2">
