--- a/team.html
+++ b/team.html
@@ -104,7 +104,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                            <h4 class="section-title">ARC Obafemi A IBITOYE,</h4>
+                            <h4 class="section-title mt-lg-5 mt-md-5 mt-sm-5 ">ARC Obafemi A IBITOYE,</h4>
                             <h1 class="display-10 mb-4 btech">BTech, Msc(UNILAG), ARCON, PhD </h1>
                             <p style="text-align: justify;">Arc Obafemi A. Ibitoye (F4689), is a goal-driven architect. He has had his fair share of humble beginnings and steady progress.
                                 He holds a B.Tech in Architecture from Ladoke Akintola University of Technology, Ogbomoso. 
@@ -263,7 +263,7 @@
         <div class="row g-5">
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-light mb-4">Address</h3>
-                <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>Block 5, plot 1A, Redemption Camp Mowe Ogun State.</p>
+                <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>Plot 1A, plot 5A, Estate 7, Redemption City, Nigeria.</p>
                 <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>(+234) 807-7701-903, <br> (+234) 813-8355-721, <br> (+234) 816-6778-555</p>
                 <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>urbancr8orsltd@gmail.com</p>
                 <div class="d-flex pt-2">
