--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <div class="container-fluid p-0 pb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="owl-carousel header-carousel position-relative">
             <div class="owl-carousel-item position-relative" data-dot="<img src='img/slide/D30.png'>">
-                <img class="img-fluid" src="img/slide/D30.png" alt="" >
+                <img class="img-fluid w-100 " src="img/slide/D30.png" alt="" >
                 <div class="owl-carousel-inner">
                     <div class="container">
                         <div class="row justify-content-start">
