CEO profile picture set

--- a/team.html
+++ b/team.html
@@ -99,7 +99,7 @@
                     <div class="row g-5">
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                             <div class="about-img">
-                                <img class="position-absolute img-fluid w-auto h-auto mb-md-1 mb-1 pb-5 ceoProfile" src="img/toyeProfile1.png" alt="">
+                                <img class="position-absolute img-fluid w-auto h-auto mb-md-1 mb-1 pb-5 ceoProfile" src="img/profilePic.png" alt="">
                                 <img class="img-fluid" src="img/about-2.jpg" alt="">
                             </div>
                         </div>
@@ -137,6 +137,7 @@
                             </div>
                             <a class="btn btn-primary appointment py-3 px-5" href="https://api.whatsapp.com/send?phone=+2348138355721&text=Hello,Urbancr8ors ?. I will like to make an enqiuiry">Let's have a chat</a>
                         </div>
+                        
                     </div>
                 </div>
             </div>
